--- a/HTML-And-CSS/06.Flexbox/07.Blog-Layout/index.html
+++ b/HTML-And-CSS/06.Flexbox/07.Blog-Layout/index.html
@@ -16,7 +16,7 @@
             <article>
                 <section>
                     <h1>Heading level 1</h1>
-                    <img class = "image1" src="images/Image1" alt="Elevators">
+                    <img class = "image1" src="images/Image1.jpg" alt="Elevators">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tempus lorem nibh, quis vehicula quam eleifend vel. Sed sagittis urna a commodo fermentum. Donec fringilla volutpat mi, non ultrices dolor ultrices quis. Quisque vel lectus vel dui fermentum ornare. Mauris at suscipit orci. Sed convallis eget nisl ac fermentum. Ut tincidunt dui velit, ut malesuada nulla lobortis at. Morbi in gravida nulla. Donec ut massa imperdiet, pulvinar nisi quis, auctor dolor. Curabitur sed facilisis nibh, a tincidunt lectus. Duis interdum nibh quis porttitor facilisis. In sit amet nulla sed nibh tristique iaculis eu nec metus.</p>
                     <p>Aliquam hendrerit egestas orci, at sollicitudin lectus mattis eu. Nunc elementum congue sagittis. Praesent in tempus nisl. Vestibulum consequat dapibus arcu, in ornare felis gravida et. Vestibulum ut diam lacinia, sagittis leo eu, convallis felis. Maecenas sit amet ipsum lobortis, sollicitudin sem a, blandit purus. Nulla vehicula dignissim augue id sagittis. Sed pulvinar erat non fermentum elementum. Quisque volutpat, nunc id congue finibus, dui dolor efficitur nunc, ac interdum lacus lacus in enim. Nullam mattis nulla a magna efficitur, et rhoncus nulla ullamcorper. Mauris fermentum dictum massa vitae porta. Maecenas rutrum augue eu lorem fringilla fringilla. Mauris posuere luctus libero et sodales. Donec posuere pharetra efficitur.</p>
                 </section>
@@ -47,7 +47,7 @@
                         finibus magna blandit.</p>
                 </section>
                 <section>
-                    <img class="image2" src="Image2.jpg" alt="dog">
+                    <img class="image2" src="images/Image2.jpg" alt="dog">
                     <p></p>
                     <p></p>
                 </section>
