--- a/HTML-And-CSS/07.MediaQueries/02.Responsive-Top-Menu/index.html
+++ b/HTML-And-CSS/07.MediaQueries/02.Responsive-Top-Menu/index.html
@@ -2,8 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Site Layout</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -18,23 +16,23 @@
             </ul>
         </nav>
     </header>
-    <aside>
-        <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">Tasks</a></li>
-            <li><a href="">Create</a></li>
-        </ul>
-    </aside>
     <main>
         <h1>Tasks: 6</h1>
         <ul>
-            <li><a href="">Open: 3</a></li>
-            <li><a href="">In Progress: 1</a></li>
-            <li><a href="">Done: 2</a></li>
+            <li><a href="#">Open: 3</a></li>
+            <li><a href="#">In Progress: 1</a></li>
+            <li><a href="#">Done: 2</a></li>
         </ul>
     </main>
+    <aside>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Tasks</a></li>
+            <li><a href="#">Create</a></li>
+        </ul>
+    </aside>
     <footer>
-        <div>&copy 2021 - Task Board</div>
+        <div>&copy; 2021 - Task Board</div>
     </footer>
 </body>
 </html>
