--- a/HTML-And-CSS/Exams/Retake-Exam-13-Apr-2023/03. Animal-Help/index.html
+++ b/HTML-And-CSS/Exams/Retake-Exam-13-Apr-2023/03. Animal-Help/index.html
@@ -1,151 +1,180 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="reset.css">
-    <title>MovieDB</title>
-</head>
-<body>
-    <section class="nav">
-        <div class="nav_help">
-            <p>AnimalHelp</p>
-        </div>
-        <div class="nav_links">
-            <ul class="list" role="list">
-                <li>Mission</li>
-                <li>Volunteer</li>
-                <li>News</li>
-                <li>Contact</li>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="stylesheet" href="reset.css">
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet"
+              href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+        <title>Movie DB</title>
+    </head>
+    <body>
+        <section class="nav">
+            <div class="nav__help">
+                <p>AnimalHelp</p>
+            </div>
+            <div class="nav__links">
+                <ul class="list" role="list">
+                    <li>Mission</li>
+                    <li>Volunteer</li>
+                    <li>News</li>
+                    <li>Contact</li>
+                </ul>
+            </div>
+        </section>
+        <section class="donation_container">
+            <div class="donation__content">
+                <h3>You can make a difference</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua</p>
+                <div class="donation__btn">
+                    <button class="btn_donate">Donate Now</button>
+                    <button class="btn_join">Join our Newsletter</button>
+                </div>
+            </div>
+            <div class="donation__right_pic">
+                <img src="Images/Promo-MemberPaw.jpg" alt="help animal">
+            </div>
+        </section>
+        <section class="description_container">
+            <div class="description__title">
+                <h3>We're there when animals need us most.</h3>
+            </div>
+            <div class="description__sub_title">
+                <p>Lorme ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero.</p>
+            </div>
+            <div class="description__cards">
+                <div class="description__card_content">
+                    <p><i class="fa fa-home" aria-hidden="true"></i></p>
+                    <h3>Building a more humane society</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed
+                        cursus ante dapibus diam.c Sed nisi. Nulla quis sem at nibh elementum imperdiet.</p>
+                </div>
+                <div class="description__card_content">
+                    <p><i class="fas fa-helicopter"></i></p>
+                    <h3>Fighting for ALL animals</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed
+                        cursus ante dapibus diam.c Sed nisi. Nulla quis sem at nibh elementum imperdiet.</p>
+                </div>
+                <div class="description__card_content">
+                    <p><i class="fa fa-pencil" aria-hidden="true"></i></p>
+                    <h3>Volunteer</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed
+                        cursus ante dapibus diam.c Sed nisi. Nulla quis sem at nibh elementum imperdiet.</p>
+                </div>
+            </div>
+        </section>
+        <section class="work_container">
+            <div class="work__title">
+                <h2>WE WORK TO:</h2>
+            </div>
+            <div>
+                <ul class="work-list" role="list">
+                    <li><i class="fa fa-circle" aria-hidden="true"></i> End the cruelest practices toward all animals.
+                    </li>
+                    <li><i class="fa fa-circle" aria-hidden="true"></i> Several affiliated animal sanctuaries providing
+                        direct care and medical help for animals in need.
+                    </li>
+                    <li><i class="fa fa-circle" aria-hidden="true"></i> Care for animals in crisis.</li>
+                    <li><i class="fa fa-circle" aria-hidden="true"></i> Rescuers and caregivers with years of
+                        experience.
+                    </li>
+                    <li><i class="fa fa-circle" aria-hidden="true"></i> Build a stronger animal protection movement.
+                    </li>
+                    <li><i class="fa fa-circle" aria-hidden="true"></i> The world's greatest roster of experts in animal
+                        welfare.
+                    </li>
+                </ul>
+            </div>
+            <div class="work__btn">
+                <button>Our Mission</button>
+            </div>
+        </section>
+        <section class="animals">
+            <div class="animals__title">
+                <h2>Animals</h2>
+            </div>
+            <div class="animals__sub_title">
+                <p>We fight for ALL animals, from A to Z.</p>
+            </div>
+            <div class="animals_pic_list">
+                <img src="Images/beaver.webp" alt="beaver pic">
+                <img src="Images/cat.webp" alt="cat pic">
+                <img src="Images/chipmunks.webp" alt="chipmunks pic">
+                <img src="Images/dog.webp" alt="dig pic">
+            </div>
+        
+        </section>
+        <section class="how_we_work_container">
+            <div class="how_we_work__title">
+                <h3>How we work</h3>
+            </div>
+            <div class="how_we_work__cards_container">
+                <div class="how_we_work__card_title">
+                    <p>Ending the cruelest practice</p>
+                </div>
+                <div class="how_we_work__card_description">
+                    <p>We are focused on ending the worst forms of institutionalized animal suffering. Our progress is
+                        the result of our work with governments, the private sector and multinational bodies; public
+                        awareness and consumer education campaigns, public policy efforts and more.</p>
+                </div>
+            </div>
+            <div class="how_we_work__cards_container">
+                <div class="how_we_work__card_title">
+                    <p>Caring for animals in crisis</p>
+                </div>
+                <div class="how_we_work__card_description">
+                    <p>We respond to large-scale cruelty cases and disasters around the world, providing rescue,
+                        hands-on care, logistics and expertise when animals are caught in crises. Our care centers heal
+                        and provide lifelong sanctuary to abused, abandoned, exploited, vulnerable and neglected
+                        animals.</p>
+                </div>
+            </div>
+            <div class="how_we_work__cards_container">
+                <div class="how_we_work__card_title">
+                    <p>Building a stronger animal protection movement</p>
+                </div>
+                <div class="how_we_work__card_description">
+                    <p>Through partnerships, trainings, support, collaboration and more, we're building a more humane
+                        world by empowering and expanding the capacity of animal welfare advocates and organizations in
+                        the United States and across the globe. Together, we'll bring about faster change for
+                        animals.</p>
+                </div>
+            </div>
+        </section>
+        <section class="news">
+            <div class="news__left_side_container">
+                <img src="Images/help-animals.webp" alt="help animal">
+            </div>
+            <div class="news__right_side_container">
+                <div class="news__right_side_title">
+                    <h3>Get HSUS news and action alerts</h3>
+                </div>
+                <div class="news__right_side_subtitle">
+                    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua."</p>
+                </div>
+                <div class="news__right_side_email">
+                    <label>
+                        <input placeholder="E-mail">
+                    </label>
+                </div>
+                <div class="news__right_side_send_btn">
+                    <button>SEND</button>
+                </div>
+            </div>
+        </section>
+        <footer class="footer">
+            <ul class="footer__icons" role="list">
+                <li><i class="fa-brands fa-twitter"></i></li>
+                <li><i class="fa-brands fa-facebook"></i></li>
+                <li><i class="fa-brands fa-instagram"></i></li>
             </ul>
-        </div>
-    </section>
-    <section class="donation_container">
-        <div class="donation_content">
-            <h3>You can make a difference</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-            <div class="donation_btn">
-                <button class="btn_donate">Donate Now</button>
-                <button class="btn_join">Join our Newsletter</button>
+            <div class="footer__copyright">
+                <p>&copy Copyright, 2023</p>
             </div>
-        </div> 
-        <div class="donation_pic">
-            <img src="images/Promo-MemberPaw.jpg" alt="promo-member-paw">
-        </div>
-    </section>
-    <section class="description_container">
-        <div class="description_title">
-            <h3>We're there when animals need us most.</h3>            
-        </div>
-        <div class="description_sub_title">
-            <p>Lorme ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero.</p>
-        </div>
-        <div class="description_cards">
-            <div class="description_cards_content">
-                <p><i class="fa fa-home" aria-hidden="true"></i></p>
-                <h3>Building a more humane society</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam.c Sed nisi. Nulla quis sem at nibh elementum imperdiet.</p>
-            </div>
-            <div class="description_cards_content">
-                <p><i class="fas fa-helicopter"></i></p>
-                <h3>Fighting for ALL animals</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam.c Sed nisi. Nulla quis sem at nibh elementum imperdiet.</p>
-            </div>
-            <div class="description_cards_content">
-                <p><i class="fa fa-pencil" aria-hidden="true"></i></p>
-                <h3>Volunteer</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam.c Sed nisi. Nulla quis sem at nibh elementum imperdiet.</p>
-            </div>
-        </div>
-    </section>
-    <section class="work_container">
-        <div class="work_title">
-            <h2>WE WORK TO:</h2>
-        </div>
-        <div>
-            <ul class="list" role="list">
-                <li><i class="fa fa-circle" aria-hidden="true">End the cruelest practices toward all animals.</i></li>
-                <li><i class="fa fa-circle" aria-hidden="true"></i>Care for animals in crisis.</li>
-                <li><i class="fa fa-circle" aria-hidden="true"></i>Build a stronger animal protection movement.</li>
-                <li><i class="fa fa-circle" aria-hidden="true"></i>Several affiliated animal sanctuaries providing direct care and medical help for animals in need.</li>
-                <li><i class="fa fa-circle" aria-hidden="true"></i>Rescuers and caregivers with years of experience.</li>
-                <li><i class="fa fa-circle" aria-hidden="true"></i>The world's greatest roster of experts in animal welfare.</li>
-            </ul>
-        </div>
-        <div class="work_btn">
-            <button>Our Mission</button>
-        </div>
-    </section>
-    <section class="animals">
-        <div class="animals_title">
-            <h2>Animals</h2>
-        </div>
-        <div class="animals_sub_title">
-            <p>We fight for ALL animals, from A to Z.</p>
-        </div>
-        <div class="animals_pics">
-            <img src="Images/beaver.webp" alt="beaver">
-            <img src="Images/cat.webp" alt="cat">
-            <img src="Images/chipmunks.webp" alt="chipmunks">
-            <img src="Images/dog.webp" alt="dog">
-        </div>
-    </section>
-    <section class="how_we_work_container">
-        <div class="how_we_work_title">
-            <h3>How we work</h3>
-            <div class="how_we_work_card_container">
-                <div class="how_we_work_title"></div>
-                <p>Ending the cruelest practice</p>
-            </div>
-            <div class="how_we_work_description">
-                <p>We are focused on ending the worst forms of institutionalized animal suffering. Our progress is the result of our work with governments, the private sector and multinational bodies; public awareness and consumer education campaigns, public policy efforts and more.</p>
-            </div>
-            <div class="how_we_work_card_container">
-                <div class="how_we_work_title"></div>
-                <p>Caring for animals in crisis</p>
-            </div>
-            <div class="how_we_work_description">
-                <p>We respond to large-scale cruelty cases and disasters around the world, providing rescue, hands-on care, logistics and expertise when animals are caught in crises. Our care centers heal and provide lifelong sanctuary to abused, abandoned, exploited, vulnerable and neglected animals.</p>
-            </div>
-            <div class="how_we_work_card_container">
-                <div class="how_we_work_title"></div>
-                <p>Building a stronger animal protection movement</p>
-            </div>
-            <div class="how_we_work_description">
-                <p>Through partnerships, trainings, support, collaboration and more, we're building a more humane world by empowering and expanding the capacity of animal welfare advocates and organizations in the United States and across the globe. Together, we'll bring about faster change for animals.</p>
-            </div>
-        </div>             
-    </section>
-    <section class="news">
-        <div class="news_left_side_container">
-            <img src="Images/help-animals.webp" alt="help animals">
-        </div>  
-        <div class="news_right_side_container">
-            <h3>Get HSUS news and action alerts</h3>
-        </div>
-        <div class="news_right_side_title">
-            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</p>
-        </div>
-        <div class="news_right_side_email">
-            <label>
-                <input placeholder="E-mail">
-            </label>
-        </div>
-        <div class="news_right_side_send_button">
-            <button>SEND</button>
-        </div>
-    </section>  
-    <footer class="footer">
-        <ul class="footer__icons" role="list">
-            <li><i class="fa-brands fa-twitter"></i></li>
-            <li><i class="fa-brands fa-facebook"></i></li>
-            <li><i class="fa-brands fa-instagram"></i></li>
-        </ul>
-        <div class="footer__copyright">
-            <p>&copy Copyright, 2023</p>
-        </div>
-    </footer>
-</body>
+        </footer>
+    </body>
 </html>
