--- a/HTML-And-CSS/Homeworks/04.CSS-Box-Model/03.Brazil-Coffee/index.html
+++ b/HTML-And-CSS/Homeworks/04.CSS-Box-Model/03.Brazil-Coffee/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Brazil coffee</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <section>
         <img src="coffee.jpg" alt="Brazil-Coffee">
         <h2>Brazil Coffee</h2>
-        <div>$16 per kg</div>
+        <p id="kg">$16 per kg</p>
         <button>BUY FROM BRAZIL</button>
         <p>Save 15% on your first subscription order when you use the code FIRST_15 at checkout.</p>
     </section>
